--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 fastapi
 uvicorn
-google-cloud-firestore==2.11.0
-firebase-admin==6.5.0
+google-cloud-firestore>=2.13.1,<3.0.0
+firebase-admin>=6.2.0,<7.0.0
 newspaper3k
 python-dotenv
 lxml[html_clean]
+grpcio>=1.48.0,<2.0.0
+grpcio-status>=1.48.0,<2.0.0
+protobuf>=3.20.0,<5.0.0
